# bukurs

./: .editorconfig  .gitignore  Cargo.toml  README.md  config.example.yml
.github/workflows/: release.yml
bench/: Cargo.toml  README.md
bench/benches/: benchmark.rs  optimization_benchmark.rs
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  editor.rs  fetch_ui.rs  interactive.rs  main.rs  tag_ops.rs
cli/src/commands/: add.rs  delete.rs  edit.rs  helpers.rs  import_export.rs  lock_unlock.rs  misc.rs  mod.rs  print.rs  search.rs  tag.rs  update.rs
cli/src/format/: json.rs  mod.rs  plain.rs  toml.rs  toon.rs  traits.rs  yaml.rs
cli/src/output/: colorize.rs
cli/src/plugins/: archive.rs  auto_tagger.rs  backup.rs  clipboard_watcher.rs  csv_format.rs  dead_link_checker.rs  duplicate_checker.rs  expiry.rs  mod.rs  notes.rs  pinned.rs  private_bookmarks.rs  qr.rs  reading_list.rs  reminder.rs  rss_feed.rs  statistics.rs  tag_suggester.rs  title_fetcher.rs  url_validator.rs  webhook.rs
lib/: Cargo.toml
lib/src/: browser.rs  config.rs  crypto.rs  db.rs  error.rs  fetch.rs  fuzzy.rs  lib.rs  operations.rs  tags.rs  utils.rs
lib/src/commands/: mod.rs  undo.rs
lib/src/import_export/: browser.rs  export.rs  import.rs  mod.rs
lib/src/models/: bookmark.rs  errors.rs  mod.rs
lib/src/plugin/: hooks.rs  manager.rs  mod.rs  traits.rs
src/: browser.rs  cli.rs  crypto.rs  db.rs  editor.rs  fetch.rs  fuzzy.rs  import_export.rs  interactive.rs  main.rs  models.rs  operations.rs  tags.rs  utils.rs
src/format/: json.rs  mod.rs  plain.rs  toml.rs  toon.rs  yaml.rs
src/import_export/: browser.rs  export.rs  import.rs  mod.rs
src/models/: bookmark.rs  bookmark_kind.rs  errors.rs  mod.rs
src/output/: colorize.rs
