[package]
name = "buku"
version = "0.1.0"
edition = "2021"
authors = ["Arun Prakash Jana <engineerarun@gmail.com>"]
description = "Bookmark manager like a text-based mini-web."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.24"
rpassword = "7.4"
owo-colors = "4.2.3"
toml = "0.9.8"
serde_yaml = "0.9.34"
skim = "0.20"
chrono = "0.4"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
regex = "1.12"
open = "5.3"
rustyline = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"

[dev-dependencies]
rstest = "0.26"
