[package]
name = "buku"
version = "0.1.0"
edition = "2021"
authors = ["Arun Prakash Jana <engineerarun@gmail.com>"]
description = "Bookmark manager like a text-based mini-web."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tl = "0.7"
rpassword = "7.4"
owo-colors = "4.2.3"
toml = "0.9.8"
serde_yaml = "0.9.34"
skim = "0.20"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
regex = "1.12"
open = "5.3"
rustyline = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
strs_tools = "0.36"
simd-json = "0.17.0"

[dev-dependencies]
rstest = "0.26"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
