[package]
name = "bukurs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bukurs = { path = "../lib" }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
owo-colors = "4.2.3"
rustyline = "17.0"
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
open = "5.3"
tempfile = "3.23"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
serde_yaml = "0.9.34"
indicatif = "0.18"
rayon = "1.11"
console = "0.16"

[dev-dependencies]
rstest = "0.26"
