[package]
name = "bukurs"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tl = "0.7"
toml = "0.9.8"
serde_yaml = "0.9.34"
nucleo-picker = "0.9"
thiserror = "2.0"
log = "0.4"
regex = "1.12"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strs_tools = { version = "0.37.0", default-features = false, features = ["string_split", "std", "simd"] }
simd-json = "0.17.0"
uuid = { version = "1.18.1", features = ["v4"] }
memchr = "2.7.6"
num_cpus = "1.16"


[dev-dependencies]
rstest = "0.26"
tempfile = "3.23"
